--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
     "mongoose": "^9.0.1",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
     "react-is": "^19.2.3",
     "recharts": "^3.6.0",
